[project]
name = "py-gloomers"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yoandy Rodriguez", email = "yoandy.rmartinez@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "py_gloomers:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "python-lsp-server[all]>=1.9.0",
    "python-lsp-ruff>=2.0.2",
    "pylsp-mypy>=0.6.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/py_gloomers"]
